# aira

./: .gitignore  CLAUDE.md  Cargo.toml  SPEC.md  deny.toml
.cargo/: audit.toml
.claude/: settings.json
.claude/agents/: code-quality-gate.md  security-auditor.md  test-coverage-analyzer.md
.claude/commands/: milestone.md  security-review.md
.claude/commands/workflow/: debug.md  refactor.md
.claude/docs/: KEY_CONTEXTS.md  architecture.md  crypto.md  network.md  release.md  storage.md
.claude/hooks/: auto-format.js
.claude/rules/: git.md  security.md  testing.md  unsafe.md
.github/workflows/: android.yml  ci.yml  release.yml
crates/aira-bot/: Cargo.toml
crates/aira-bot/examples/: echo.rs
crates/aira-bot/src/: context.rs  lib.rs  runner.rs
crates/aira-cli/: Cargo.toml
crates/aira-cli/src/: app.rs  commands.rs  ipc.rs  main.rs  notifications.rs  ui.rs
crates/aira-core/: Cargo.toml
crates/aira-core/fuzz/: Cargo.toml
crates/aira-core/fuzz/fuzz_targets/: fuzz_decode_keys.rs  fuzz_parse_message.rs
crates/aira-core/locales/en/: main.ftl
crates/aira-core/locales/ru/: main.ftl
crates/aira-core/src/: bip39_wordlist.rs  device.rs  group.rs  group_proto.rs  handshake.rs  i18n.rs  identity.rs  kem.rs  lib.rs  padding.rs  proto.rs  ratchet.rs  safety.rs  seed.rs  spam.rs  sync.rs  util.rs
crates/aira-core/src/crypto/: awslc.rs  compat_tests.rs  mod.rs  rustcrypto.rs
crates/aira-core/tests/: multidevice.rs
crates/aira-daemon/: Cargo.toml
crates/aira-daemon/src/: client.rs  handler.rs  ipc.rs  lib.rs  main.rs  transfers.rs  types.rs
crates/aira-ffi/: Cargo.toml  uniffi.toml
crates/aira-ffi/src/: callbacks.rs  lib.rs  runtime.rs  types.rs
crates/aira-gui/: Cargo.toml
crates/aira-gui/src/: app.rs  daemon_manager.rs  ipc.rs  keychain.rs  main.rs  notifications.rs  onboarding.rs  password_vault.rs  state.rs  theme.rs  tray.rs
crates/aira-gui/src/views/: add_contact.rs  chat.rs  contacts.rs  groups.rs  identity.rs  mod.rs  settings.rs  transfers.rs  unlock.rs  welcome.rs
crates/aira-gui/src/widgets/: message_bubble.rs  mod.rs  status_badge.rs
crates/aira-gui/wix/: main.wxs
crates/aira-net/: Cargo.toml
crates/aira-net/src/: blobs.rs  connection.rs  discovery.rs  endpoint.rs  lib.rs  protocol.rs  ratelimit.rs  relay.rs
crates/aira-net/src/transport/: cdn.rs  direct.rs  fingerprint.rs  mimicry.rs  mod.rs  obfs.rs  reality.rs  tor.rs
crates/aira-net/tests/: dpi_simulator.rs  relay_offline.rs  two_node_chat.rs
crates/aira-storage/: Cargo.toml
crates/aira-storage/src/: backup.rs  contacts.rs  dedup.rs  devices.rs  encrypted.rs  groups.rs  lib.rs  messages.rs  pending.rs  pseudonyms.rs  sessions.rs  settings.rs  types.rs
docs/: BOT_SDK.md  INSTALL.md  KEY_CONTEXTS.md
mobile/android/: build.gradle.kts  settings.gradle.kts
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/org/aira/android/: AiraApp.kt  MainActivity.kt
mobile/android/app/src/main/kotlin/org/aira/android/push/: FcmService.kt  UnifiedPushReceiver.kt
mobile/android/app/src/main/kotlin/org/aira/android/repository/: AiraRepository.kt
mobile/android/app/src/main/kotlin/org/aira/android/service/: AiraDaemonService.kt
mobile/android/app/src/main/kotlin/org/aira/android/ui/components/: MessageBubble.kt  StatusBadge.kt
mobile/android/app/src/main/kotlin/org/aira/android/ui/navigation/: NavGraph.kt
mobile/android/app/src/main/kotlin/org/aira/android/ui/screens/: AddContactScreen.kt  ChatScreen.kt  ContactsScreen.kt  GroupChatScreen.kt  GroupsScreen.kt  IdentityScreen.kt  SettingsScreen.kt
mobile/android/app/src/main/kotlin/org/aira/android/ui/theme/: Theme.kt
mobile/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
mobile/android/app/src/main/res/values/: strings.xml  themes.xml
packaging/linux/: AppRun  aira.desktop
packaging/macos/: Info.plist.template
scripts/: bundle-appimage.sh  bundle-macos.sh  release.sh
spec/: 01-overview.md  02-crypto.md  03-network.md  04-protocol-wire.md  05-protocol-versioning.md  06-protocol-messaging.md  07-protocol-extensibility.md  08-protocol-security.md  09-storage.md  10-daemon-ipc.md  11-cli.md  12-dependencies.md  13-threat-model.md  14-groups.md  15-spam.md  16-multidevice.md  17-cross-platform.md  18-milestones.md  19-quality.md  20-appendix.md
