[package]
name = "aira-cli"
description = "Aira CLI client: ratatui TUI"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aira"
path = "src/main.rs"

[dependencies]
aira-core = { path = "../aira-core" }

ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
serde.workspace = true
postcard.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
