[package]
name = "aira-cli"
description = "Aira CLI client: ratatui TUI"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aira"
path = "src/main.rs"

[dependencies]
aira-core = { path = "../aira-core" }
aira-daemon = { path = "../aira-daemon" }
aira-storage = { path = "../aira-storage" }

ratatui.workspace = true
crossterm = { workspace = true, features = ["event-stream"] }
tokio.workspace = true
serde.workspace = true
postcard.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
notify-rust.workspace = true
dirs.workspace = true
hex.workspace = true
