[package]
name = "aira-daemon"
description = "Aira background daemon: event loop, IPC socket"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aira-daemon"
path = "src/main.rs"

[dependencies]
aira-core = { path = "../aira-core" }
aira-net = { path = "../aira-net" }
aira-storage = { path = "../aira-storage" }

tokio.workspace = true
serde.workspace = true
postcard.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
