[package]
name = "aira-ffi"
description = "Aira UniFFI bindings for Android"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "aira_ffi"

[dependencies]
aira-core = { path = "../aira-core" }
aira-net = { path = "../aira-net" }
aira-storage = { path = "../aira-storage" }
aira-daemon = { path = "../aira-daemon" }

uniffi.workspace = true
tokio.workspace = true
zeroize.workspace = true
tracing.workspace = true
thiserror.workspace = true
rand.workspace = true
blake3.workspace = true

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dev-dependencies]
tempfile = "3"
