[package]
name = "aira-net"
description = "Aira network layer: iroh, relay, pluggable transports"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aira-core = { path = "../aira-core" }

iroh.workspace = true
iroh-blobs.workspace = true
tokio.workspace = true
serde.workspace = true
postcard.workspace = true
governor.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
zeroize.workspace = true
blake3.workspace = true
tokio-util.workspace = true
bytes.workspace = true
rand.workspace = true
async-trait = "0.1"

# CDN relay transport (optional)
reqwest = { version = "0.12", features = ["rustls-tls"], optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
obfs4 = []
mimicry = []
cdn = ["dep:reqwest"]
reality = []
tor = []
# tor = ["dep:arti-client"]  # TODO(M12): enable when arti-client is added
# arti-client = { version = "0.27", optional = true }
