[package]
name = "aira-storage"
description = "Aira storage layer: redb embedded database"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aira-core = { path = "../aira-core" }

redb.workspace = true
serde.workspace = true
postcard.workspace = true
zeroize.workspace = true
blake3.workspace = true
chacha20poly1305.workspace = true
rand.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
