[package]
name = "aira-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
aira-core = { path = ".." }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_decode_keys"
path = "fuzz_targets/fuzz_decode_keys.rs"

[[bin]]
name = "fuzz_parse_message"
path = "fuzz_targets/fuzz_parse_message.rs"
